# sentry-api-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: api.py  utils.py
src/mcp_server_sentry/: __init__.py  api.py  server.py
